full-moon/tests/roblox_cases/fail/parser/declared_functions/source.lua
declare function foo(a: string): number

@deprecated
declare function bar(b: number)